// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu.ts should not attach content and match snapshot 1`] = `
<span class="menu"><!--teleport start--><div style="z-index: 10;" data-popper-root=""><transition-stub><div id="menu-1" role="menu" tabindex="0" class="popper__box menu__box" style="display: none;"><div class="popper__arrow" data-popper-arrow=""></div><div class="menu__content"><span>Content</span></div>
</div>
</transition-stub>
</div>
<!--teleport end--><button role="button" aria-haspopup="true" aria-expanded="true" aria-controls="menu-1">Activator</button></span>
`;

exports[`Menu.ts should render component and match snapshot 1`] = `<span class="menu"><!--teleport start--><!--teleport end--><button role="button" aria-haspopup="true" aria-expanded="true" aria-controls="menu-1">Activator</button></span>`;

exports[`Menu.ts should render component and match snapshot 2`] = `
<div id="app">
  <div style="z-index: 10; position: absolute; left: 0px; top: 0px; margin: 0px; bottom: 0px; transform: translate(0px, 0px);" data-popper-root="" data-popper-reference-hidden="" data-popper-escaped="" data-popper-placement="top">
    <transition-stub>
      <div id="menu-1" role="menu" tabindex="0" class="popper__box menu__box">
        <div class="popper__arrow" data-popper-arrow=""></div>
        <div class="menu__content">Content Content Content</div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`Menu.ts should render component with min/max width and match snapshot 1`] = `
<span class="menu"><!--teleport start--><div style="z-index: 10;" data-popper-root=""><transition-stub><div id="menu-1" role="menu" tabindex="0" class="popper__box menu__box" style="max-width: 200px; min-width: 100px; display: none;"><div class="popper__arrow" data-popper-arrow=""></div><div class="menu__content"><span>Content</span></div>
</div>
</transition-stub>
</div>
<!--teleport end--><button role="button" aria-haspopup="true" aria-expanded="true" aria-controls="menu-1">Activator</button></span>
`;

exports[`Menu.ts should render component with zIndex prop and match snapshot 1`] = `
<span class="menu"><!--teleport start--><div style="z-index: 10;" data-popper-root=""><transition-stub><div id="menu-1" role="menu" tabindex="0" class="popper__box menu__box" style="display: none;"><div class="popper__arrow" data-popper-arrow=""></div><div class="menu__content"><span>Content</span></div>
</div>
</transition-stub>
</div>
<!--teleport end--><button role="button" aria-haspopup="true" aria-expanded="true" aria-controls="menu-1">Activator</button></span>
`;

exports[`Menu.ts should render with MenuItem and match snapshot 1`] = `<span class="menu"><!--teleport start--><div style="z-index: 10;" data-popper-root=""><transition-stub><div id="menu-1" role="menu" tabindex="0" class="popper__box menu__box" style="display: none;"><div class="popper__arrow" data-popper-arrow=""></div><div class="menu__content"><div id="menu-item-1" role="menuitem" tabindex="-1" class="menu__item menu__item--disabled" aria-disabled="true">Item 1</div><div id="menu-item-2" role="menuitem" tabindex="-1" class="menu__item">Item 2</div><div id="menu-item-3" role="menuitem" tabindex="-1" class="menu__item">Item 3</div></div></div></transition-stub></div><!--teleport end--><button role="button" aria-haspopup="true" aria-expanded="true" aria-controls="menu-1">Activator</button></span>`;
